@@ -30,7 +30,12 @@
         <artifactId>appassembler-maven-plugin</artifactId>
         <configuration>
           <!-- Extra JVM arguments that will be included in the bin scripts -->
-          <extraJvmArguments>-DMCR.AppName=${MCR.AppName}</extraJvmArguments>
+          <extraJvmArguments>-DMCR.AppName=${MCR.AppName}
+            --add-opens java.base/java.net=ALL-UNNAMED --add-opens=java.base/java.io=ALL-UNNAMED
+            --add-opens java.base/java.lang=ALL-UNNAMED --add-opens=java.base/java.util=ALL-UNNAMED
+            --add-opens=java.base/java.util.concurrent=ALL-UNNAMED --add-opens=java.rmi/sun.rmi.transport=ALL-UNNAMED
+            --add-opens java.base/java.net=ALL-UNNAMED
+          </extraJvmArguments>
           <repositoryLayout>flat</repositoryLayout>
           <repositoryName>lib</repositoryName>
           <useWildcardClassPath>true</useWildcardClassPath>
